--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 id="heading">Hello, Welcome to JS</h1>
+	<input type="number" id="n1"/><br/>
+	<input type="number" id="n2"/><br/>
+	<button id="sum_btn">Calculate</button>
+	<div id="sum" ></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
