--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<input type="number" id="n1"/><br/>
 	<input type="number" id="n2"/><br/>
 	<button id="sum_btn">Calculate</button>
-	<div id="sum" ></div>
+	<div id="Sum" ></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
